<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    tools:context="pablo384.tresenraya.MainActivity">


    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/app_name"
            style="@style/titulo"/>

        <Button
            android:id="@+id/unjug"
            android:text="@string/unjugador"
            style="@style/boton"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:checked="true"
                android:id="@+id/facil"
                android:text="@string/facil"
                style="@style/radio" />
            <RadioButton
                android:id="@+id/normal"
                android:text="@string/normal"
                style="@style/radio"/>
            <RadioButton
                android:id="@+id/imposible"
                android:text="@string/imposible"
                style="@style/radio"/>


        </RadioGroup>

        <Button
            android:id="@+id/dosjug"
            android:text="@string/dosjugadores"
            style="@style/boton"/>



    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.5"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3"
        >

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/circulo"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/b2"
            android:src="@drawable/circulo"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/circulo"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/aspa"
            style="@style/casilla"/>
        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"/>




    </GridLayout>


</LinearLayout>
